--- a/Leetcode/59. Spiral Matrix II.md
+++ b/Leetcode/59. Spiral Matrix II.md
@@ -3,7 +3,7 @@ Given a positive integer n, generate an n x n matrix filled with elements from 1
 
 Example 1:
 
-![](imgs\59.jpg)
+![](imgs/59.jpg)
 
 ```
 Input: n = 3
